feat: SNAP Standard account creation
